--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <div class="main">
+  <div class="cell">
 {% if questions %}
-	<table>
+	<table class="questions">
 	  <thead><tr>
 		<td>Votes</td><td>Date</td><td>Title</td><td>Image</td><td>Views</td>
 	  </tr></thead>
@@ -18,7 +19,9 @@
 	  </tr>
 {% endfor %}
 	</table>
+    <div class="bottom">lorem ipsum dolot sit amet</div>
 {% endif %}
+  </div>
 </div>
 
 <script type="text/javascript">
