Include link to add new question

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 	  </tr>
 {% endfor %}
 	</table>
-    <div class="bottom">lorem ipsum dolot sit amet</div>
+    <div class="bottom">To ask question click <a href="{{url_for('ask_question')}}">here</a>.</div>
 {% endif %}
   </div>
 </div>
