--- a/static/style.css
+++ b/static/style.css
@@ -41,6 +41,10 @@ table.questions td:first-child {
 	border-left:none;
 }
 
+table.center {
+	text-align:center;
+}
+
 div.bottom {
 	margin:1em;
 	padding:1em 1em 1em 2em;
@@ -54,5 +58,9 @@ div.authors {
     right:0;
 	padding:1em;
 	background-color:rgba(25,255,25,0.5);
+}
+
+input, textarea {
+	font-size:15pt;
 }
 
