--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,10 @@
 	{% endfor %}
 	</table>
     <div class="bottom">To ask question click <a href="{{url_for('ask_question')}}">here</a>.</div>
+{% else %}
+    <div class="bottom">There are no questions yet. to ask a new one click <a href="{{url_for('ask_question')}}">here</a>.</div>
 {% endif %}
+
 	<!--<div class="authors">&amp;&copy;</div>-->
   </div>
 </div>
