Functionality to load page for selected question

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 	  </tr></thead>
 	{% for question in questions %}
 	  <tr>
-		<td>{{ question.vote_number }}</td><td>{{ question.submission_time }}</td><td> <a href="">{{ question.title }}</a> </td><td>.</td><td>{{ question.view_number }}</td>
+		<td>{{ question.vote_number }}</td><td>{{ question.submission_time }}</td><td> <a href="{{url_for('question')}}">{{ question.title }}</a> </td><td>.</td><td>{{ question.view_number }}</td>
 	  </tr>
 	{% endfor %}
 	</table>
