Prepare links for adding new answer

--- a/templates/qs_answers_list.html
+++ b/templates/qs_answers_list.html
@@ -14,7 +14,7 @@
 		<td>Votes</td><td>Date</td><td>Title</td><td>Image</td><td>Views</td>
 	  </tr></thead>
 	  <tr>
-		<td>{{ question.vote_number }}</td><td>{{ question.submission_time }}</td><td> <a href="">{{ question.title }}</a> </td><td>.</td><td>{{ question.view_number }}</td>
+		<td>{{ question.vote_number }}</td><td>{{ question.submission_time }}</td><td> {{ question.title }} </td><td>.</td><td>{{ question.view_number }}</td>
 	  </tr>
 	  <tr>
 		<td colspan="5">{{ question.message }}</td>
@@ -22,9 +22,9 @@
 	</table>
 {% endif %}
 {% if answers %}
-    <div class="bottom">Your answer: click <a href="{{url_for('ask_question')}}">here</a>.</div>
+    <div class="bottom">Your answer: click <a href="{{url_for('new_answer', question_id = question.id)}}">here</a>.</div>
 {% else %}
-    <div class="bottom">There are no answers yet. You can be first: click <a href="{{url_for('ask_question')}}">here</a>.</div>
+    <div class="bottom">There are no answers yet. You can be first: click <a href="{{url_for('new_answer', question_id = question.id)}}">here</a>.</div>
 {% endif %}
 {% if answers %}
 	<table class="questions">
