--- a/templates/answer.html
+++ b/templates/answer.html
@@ -19,7 +19,10 @@
 	      <tr><td><input type="submit" content="Add question"></td></tr>
 		</table>
 	</form>
-    <div class="bottom">Back to <a href="{{url_for('question', question_id = question.id ) }}">question page</a>.</div>
+    <div class="bottom">
+		<div style="float:left">Back to <a href="{{url_for('question', question_id = question.id ) }}">question page</a>.</div>
+		<div style="float:right;">Back to <a href="{{url_for('index')}}">homepage</a></div>
+	</div>
   </div>
 </div>
 
