--- a/templates/ask-question.html
+++ b/templates/ask-question.html
@@ -13,7 +13,8 @@
 		 <thead><tr><td>Asking question</td></tr></thead>
 	      <tr><td> <input type="text" minlength="5" name="title" title="title" placeholder="Type the title" /> </td></tr>
 	      <tr><td> <textarea rows="20" cols="50" title="question" name="question" content="Add answer"></textarea> </td></tr>
-	      <tr><td> <input type="submit" content="Add question" /> </td></tr>
+	      <tr><td> <input type="submit" value="Add question" /> </td></tr>
+	      <tr><td id="notification"></td></tr>
 		</table>
 	</form>
     <div class="bottom">Back to <a href="{{url_for('index')}}">homepage</a>.</div>
