--- a/static/style.css
+++ b/static/style.css
@@ -42,6 +42,10 @@ table td:first-child {
 	border-left:none;
 }
 
+a.votes img {
+	vertical-align:text-top;
+}
+
 table.answers {
 	margin:0 auto;
 	border-bottom:1px solid #000;
