--- a/templates/qs_answers_list.html
+++ b/templates/qs_answers_list.html
@@ -14,7 +14,9 @@
 		<td>Votes</td><td>Date</td><td>Title</td><td>Image</td><td>Views</td>
 	  </tr></thead>
 	  <tr>
-		<td>{{ question.vote_number }}</td><td>{{ question.submission_time }}</td><td> {{ question.title }} </td><td>.</td><td>{{ question.view_number }}</td>
+		<td><a href="{{ url_for('vote_down_question', question_id = question.id) }}" class="votes"><img src="{{ url_for('static', filename='imgs/vote_down.png') }}" /></a> {{ question.vote_number }}
+			 <a href="{{ url_for('vote_up_question', question_id = question.id) }}" class="votes"><img src="{{ url_for('static', filename='imgs/vote_up.png') }}" /></a></td>
+		<td>{{ question.submission_time }}</td><td> {{ question.title }} </td><td>.</td><td>{{ question.view_number }}</td>
 	  </tr>
 	  <tr>
 		<td colspan="5">{{ question.message }}</td>
@@ -37,8 +39,8 @@
 	  </tr></thead>
 	{% for answer in answers %}
 	  <tr>
-		<td><a href="" class="votes"><img src="{{ url_for('static', filename='imgs/vote_down.png') }}" /></a> {{ answer.vote_number }}
-			 <a href="" class="votes"><img src="{{ url_for('static', filename='imgs/vote_up.png') }}" /></a>
+		<td><a href="{{ url_for('vote_down_answer', answer_id = answer.id) }}" class="votes"><img src="{{ url_for('static', filename='imgs/vote_down.png') }}" /></a> {{ answer.vote_number }}
+			 <a href="{{ url_for('vote_up_answer', answer_id = answer.id) }}" class="votes"><img src="{{ url_for('static', filename='imgs/vote_up.png') }}" /></a>
 			</td><td>{{ answer.submission_time }}</td><td>.</td>
 	  </tr>
 	  <tr>
