Include typical (c) on pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <div class="bottom">There are no questions yet. to ask a new one click <a href="{{url_for('ask_question')}}">here</a>.</div>
 {% endif %}
 
-	<!--<div class="authors">&amp;&copy;</div>-->
+	<div class="authors">Bartek &amp; Adam<br />&copy; 2019</div>
   </div>
 </div>
 
