Include typical (c) on page

--- a/templates/answer.html
+++ b/templates/answer.html
@@ -25,6 +25,7 @@
 		<div style="float:left">Back to <a href="{{url_for('question', question_id = question.id ) }}">question page</a>.</div>
 		<div style="float:right;">Back to <a href="{{url_for('index')}}">homepage</a></div>
 	</div>
+	  <div class="authors">Bartek &amp; Adam<br />&copy; 2019</div>
   </div>
 </div>
 
