--- a/templates/qs_answers_list.html
+++ b/templates/qs_answers_list.html
@@ -21,6 +21,9 @@
 	  <tr>
 		<td colspan="5">{{ question.message }}</td>
 	  </tr>
+	  <tr>
+		<td colspan="5"><a href="">Edit</a></td>
+	  </tr>
 	</table>
 {% endif %}
     <div class="bottom"><div style="float:left">
@@ -53,7 +56,7 @@
 	</table>
 {% endif %}
 
-	<!--<div class="authors">&amp;&copy;</div>-->
+	  <div class="authors">Bartek &amp; Adam<br />&copy; 2019</div>
   </div>
 </div>
 
