Updateing question - next step

--- a/templates/ask-question.html
+++ b/templates/ask-question.html
@@ -12,10 +12,10 @@
 		<table class="questions center">
 		 <thead><tr><td>Asking question</td></tr></thead>
 	      <tr><td>
-			<input type="text" minlength="5" name="title" title="title" placeholder="Type the title" value="" />
+			<input type="text" minlength="5" name="title" title="title" placeholder="Type the title" />
 		  </td></tr>
 	      <tr><td>
-			<textarea rows="20" cols="50" title="question" name="question" content="Add answer" value="" ></textarea>
+			<textarea rows="20" cols="50" title="question" name="question" content="Add answer"></textarea>
 		  </td></tr>
 	      <tr><td>
 			<input type="submit" value="Add question" />
